--- a/index.html
+++ b/index.html
@@ -49,4 +49,9 @@
             </div>
         </div>
     </body>
+    <footer>
+        <div class="row justify-content-center mt-5">
+            <p><i class="fa fa-copyright"></i> 2017 by Mafalda Falcão Ferreira</p>
+        </div>
+    </footer>
 </html>
