--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav nav-pills justify-content-center mt-3 mb-5">
             <li><a href="#">Me, Myself and I</a></li>
             <li><i id="circle" class="fa fa-square"></i></li>
-            <li><a href="img/cv.pdf" download><i class="fa fa-file-pdf-o"></i> CV</a></li>
+            <li><a href="img/cv.pdf">CV</a></li>
             <li><i id="circle" class="fa fa-square"></i></li>
             <li><a href="#">Blog</a></li>
         </ul>
@@ -47,6 +47,8 @@
                     </ul>
                 </div>
             </div>
+            
+
         </div>
     </body>
     <footer>
