--- a/index.html
+++ b/index.html
@@ -1,59 +1,75 @@
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
-        <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="index.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
 
-    <body>
-        <!-- todas as classes são definidas por ti. não existem classes pre-existentes -->
-        <ul class="nav nav-pills justify-content-center mt-3 mb-5">
-            <li><a href="#">Me, Myself and I</a></li>
-            <li><i id="circle" class="fa fa-square"></i></li>
-            <li><a href="img/cv.pdf">CV</a></li>
-            <li><i id="circle" class="fa fa-square"></i></li>
-            <li><a href="#">Blog</a></li>
-        </ul>
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-3">
-                    <img class="img-fluid img-circle" src="img/m.jpg">
-                </div>
+<body>
+    <!-- todas as classes são definidas por ti. não existem classes pre-existentes -->
+    <ul class="nav nav-pills justify-content-center mt-3 mb-5">
+        <li><a href="#me">Me, Myself and I</a></li>
+        <li><a class="mx-3"> &#9670</a></li>
+        <li><a href="img/cv.pdf">CV</a></li>
+        <li><a class="mx-3"> &#9670</a></li>
+        <li><a href="#edu">Education</a></li>
+        <li><a class="mx-3"> &#9670</a></li>
+        <li><a href="#blog">Blog</a></li>
+    </ul>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div id="me" class="col-3">
+                <img class="img-fluid img-circle" src="img/m.jpg">
             </div>
-            <div class="row justify-content-center mt-4">
-                <div class="col-6">
-                    <p>Hello! I'm Mafalda Falcão Ferreira!</p>
-                    <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
-                            the Integrated Master in Informatics and Computing Engineering (MIEIC) at the Faculty of Engineering
-                            of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. I love technology and innovation
-                            ever since I was a little girl. I have special interest in the areas of Data Science and Machine Learning,
-                            Databases and Web Development. Besides Informatics, I'm also passionate about mathematics, philosophy, biology, sports,
-                            traveling and photography.</p>
-                </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-6">
+                <p>Hello! I'm Mafalda Falcão Ferreira!</p>
+                <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
+                    the Integrated Master in Informatics and Computing Engineering (MIEIC) at the Faculty of Engineering
+                    of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. I love technology and
+                    innovation ever since I was a little girl. I have special interest in the areas of Data Science and Machine
+                    Learning, Databases and Web Development. Besides Informatics, I'm also passionate about mathematics,
+                    philosophy, biology, sports, traveling and photography.</p>
             </div>
-            <div class="row justify-content-center mt-3">
-                <div class="col-3">
-                    <ul id="media">
-                        <li><a href="http://www.facebook.com/mafaldafalcaotvf"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="http://www.github.com/mafaldafalcaotvf"><i class="fa fa-github"></i></a></li>
-                        <li><a href="http://www.twitter.com/mafalda_falcao"><i class="fa fa-twitter"></i></a></li>                            
-                        <li><a href="https://www.linkedin.com/in/mafaldafalcaotvf"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="http://www.500px.com/mafaldafalcaotvf"><i class="fa fa-500px"></i></a></li>
-                        <li><a href="http://www.instagram.com/mafaldafalcaotvf"><i class="fa fa-instagram"></i></a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="row justify-content-center mt-3">
+            <div class="col-3">
+                <ul id="media">
+                    <li><a href="http://www.facebook.com/mafaldafalcaotvf"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://www.github.com/mafaldafalcaotvf"><i class="fa fa-github"></i></a></li>
+                    <li><a href="http://www.twitter.com/mafalda_falcao"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/mafaldafalcaotvf"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="http://www.500px.com/mafaldafalcaotvf"><i class="fa fa-500px"></i></a></li>
+                    <li><a href="http://www.instagram.com/mafaldafalcaotvf"><i class="fa fa-instagram"></i></a></li>
+                </ul>
             </div>
-            
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div id="edu" class="col-6">
+                <h4>Education</h4>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia sed molestiae odio doloremque id et neque? Fugiat similique
+                a laudantium sit voluptatibus id, eligendi, ullam modi magnam corporis officia! Architecto!
+            </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div id="blog" class="col-6 span4 collapse-group">
+                <h4>Blog</h4>
+                <h5 class="mt-4">First of many!</h5>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia sed molestiae odio doloremque id et neque? Fugiat similique
+                a laudantium sit voluptatibus id, eligendi, ullam modi magnam corporis officia! Architecto!
+            </div>
+        </div>
+    </div>
+</body>
+<footer>
+    <div class="row justify-content-center mt-5">
+        <p><i class="fa fa-copyright"></i> 2017 by Mafalda Falcão Ferreira. All rights reserved.</p>
+    </div>
+</footer>
 
-        </div>
-    </body>
-    <footer>
-        <div class="row justify-content-center mt-5">
-            <p><i class="fa fa-copyright"></i> 2017 by Mafalda Falcão Ferreira</p>
-        </div>
-    </footer>
 </html>
