I'm liking the result :D

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -14,24 +17,22 @@
     <ul class="nav nav-pills justify-content-center mt-3 mb-5">
         <li><a href="#me">Me, Myself and I</a></li>
         <li><a class="mx-3"> &#9670</a></li>
-        <li><a href="img/cv.pdf">CV</a></li>
-        <li><a class="mx-3"> &#9670</a></li>
-        <li><a href="#edu">Education</a></li>
+        <li><a href="img/resume.pdf">CV</a></li>
         <li><a class="mx-3"> &#9670</a></li>
         <li><a href="#blog">Blog</a></li>
     </ul>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div id="me" class="col-3">
+            <div id="me" class="col-4">
                 <img class="img-fluid img-circle" src="img/m.jpg">
             </div>
         </div>
-        <div class="row justify-content-center mt-4">
+        <div class="row justify-content-center mt-5">
             <div class="col-6">
                 <p>Hello! I'm Mafalda Falcão Ferreira!</p>
                 <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
-                    the Integrated Master in Informatics and Computing Engineering (MIEIC) at the Faculty of Engineering
-                    of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. I love technology and
+                    the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
+                    of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
                     innovation ever since I was a little girl. I have special interest in the areas of Data Science and Machine
                     Learning, Databases and Web Development. Besides Informatics, I'm also passionate about mathematics,
                     philosophy, biology, sports, traveling and photography.</p>
@@ -49,19 +50,18 @@
                 </ul>
             </div>
         </div>
-        <div class="row justify-content-center mt-4">
-            <div id="edu" class="col-6">
-                <h4>Education</h4>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia sed molestiae odio doloremque id et neque? Fugiat similique
-                a laudantium sit voluptatibus id, eligendi, ullam modi magnam corporis officia! Architecto!
-            </div>
-        </div>
-        <div class="row justify-content-center mt-4">
-            <div id="blog" class="col-6 span4 collapse-group">
+        <div class="row justify-content-center mt-5">
+            <div id="blog" class="col-6">
                 <h4>Blog</h4>
                 <h5 class="mt-4">First of many!</h5>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia sed molestiae odio doloremque id et neque? Fugiat similique
-                a laudantium sit voluptatibus id, eligendi, ullam modi magnam corporis officia! Architecto!
+                <p>Hello! So this is my first post on my new blog! Lorem ipsum<a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> ...More &raquo;</a></p>
+                <!-- Mudar CSS -->
+                <div class="collapse" id="collapseExample">
+                   <div class="card card-block">
+                    dolor sit amet consectetur, adipisicing elit. Soluta adipisci architecto aspernatur facere, non perferendis. Consectetur aspernatur voluptate maiores quos necessitatibus, sunt ducimus, saepe, excepturi consequuntur a fugiat recusandae consequatur!
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                   </div>
+                </div>
             </div>
         </div>
     </div>
