still static :) few details

--- a/index.html
+++ b/index.html
@@ -53,15 +53,8 @@
         <div class="row justify-content-center mt-5">
             <div id="blog" class="col-6">
                 <h4>Blog</h4>
-                <h5 class="mt-4">First of many!</h5>
-                <p>Hello! So this is my first post on my new blog! Lorem ipsum<a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> ...More &raquo;</a></p>
-                <!-- Mudar CSS -->
-                <div class="collapse" id="collapseExample">
-                   <div class="card card-block">
-                    dolor sit amet consectetur, adipisicing elit. Soluta adipisci architecto aspernatur facere, non perferendis. Consectetur aspernatur voluptate maiores quos necessitatibus, sunt ducimus, saepe, excepturi consequuntur a fugiat recusandae consequatur!
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                   </div>
-                </div>
+                <h5 class="mt-4" href="#">First of many!</h5>
+                <p>Little and cute description here :)</p>
             </div>
         </div>
     </div>
