--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
+---
+---
+
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
+{% include header.html %}
 
 <body>
-    <!-- todas as classes são definidas por ti. não existem classes pre-existentes -->
-    <ul class="nav nav-pills justify-content-center mt-3 mb-5">
-        <li><a href="#me">Me, Myself and I</a></li>
-        <li><a class="mx-3"> &#9670</a></li>
-        <li><a href="img/resume.pdf">CV</a></li>
-        <li><a class="mx-3"> &#9670</a></li>
-        <li><a href="#blog">Blog</a></li>
-    </ul>
+    {% include navbar.html %}
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div id="me" class="col-4">
@@ -32,37 +18,53 @@
                 <p>Hello! I'm Mafalda Falcão Ferreira!</p>
                 <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
-                    of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
+                    of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation
+                    by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
                     innovation ever since I was a little girl. I have special interest in the areas of Data Science and Machine
                     Learning, Databases and Web Development. Besides Informatics, I'm also passionate about mathematics,
                     philosophy, biology, sports, traveling and photography.</p>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-3">
+                <div class="col-3">
+                    <ul id="media">
+                        {% if site.facebook_username %}
+                        <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
+                        {% endif %}
+                        {% if site.github_username %}
+                        <li><a href="http://www.github.com/{{site.github_username}}"><i class="fa fa-github"></i></a></li>
+                        {% endif %}
+                        {% if site.twitter_username %}
+                        <li><a href="http://www.twitter.com/{{site.twitter_username}}"><i class="fa fa-twitter"></i></a></li>
+                        {% endif %}
+                        {% if site.linkedin_username %}
+                        <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}"><i class="fa fa-linkedin"></i></a></li>
+                        {% endif %}
+                        {% if site.px500_username %}
+                        <li><a href="http://www.500px.com/{{site.px500_username}}"><i class="fa fa-500px"></i></a></li>
+                        {% endif %}
+                        {% if site.instagram_username %}
+                        <li><a href="http://www.instagram.com/{{site.instagram_username}}"><i class="fa fa-instagram"></i></a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-5">
+                <div id="blog" class="col-6">
+                    <h4>Blog</h4>
+                    {% for post in site.posts %}
+                    <h5 class="mt-4"><a href="{{post.url}}">{{post.title}}</a></h5>
+                    {% if post.abstract %}
+                        {{post.abstract}}
+                    {% else %}
+                        {{post.excerpt}}
+                    {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
-        <div class="row justify-content-center mt-3">
-            <div class="col-3">
-                <ul id="media">
-                    <li><a href="http://www.facebook.com/mafaldafalcaotvf"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="http://www.github.com/mafaldafalcaotvf"><i class="fa fa-github"></i></a></li>
-                    <li><a href="http://www.twitter.com/mafalda_falcao"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/mafaldafalcaotvf"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="http://www.500px.com/mafaldafalcaotvf"><i class="fa fa-500px"></i></a></li>
-                    <li><a href="http://www.instagram.com/mafaldafalcaotvf"><i class="fa fa-instagram"></i></a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-            <div id="blog" class="col-6">
-                <h4>Blog</h4>
-                <h5 class="mt-4" href="#">First of many!</h5>
-                <p>Little and cute description here :)</p>
-            </div>
-        </div>
-    </div>
-</body>
-<footer>
-    <div class="row justify-content-center mt-5">
-        <p><i class="fa fa-copyright"></i> 2017 by Mafalda Falcão Ferreira. All rights reserved.</p>
-    </div>
-</footer>
-
-</html>
+    </body>
+    
+    {% include footer.html %}
+    
+    </html>
