--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     {% include navbar.html %}
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div id="me" class="col-4">
+            <div id="me" class="col-md-4 offset-md-6">
                 <img class="img-fluid img-circle" src="img/m.jpg">
             </div>
         </div>
         <div class="row justify-content-center mt-5">
-            <div class="col-6">
+            <div class="col-md-6 offset-md-6">
                 <p>Hello! I'm Mafalda Falcão Ferreira!</p>
                 <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-3">
-                <div class="col-3">
+                <div class="col-md-3 offset-md-6">
                     <ul id="media">
                         {% if site.facebook_username %}
                         <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <div id="blog" class="col-6">
+                <div id="blog" class="col-md-6 offset-md-6">
                     <h4>Blog</h4>
                     {% for post in site.posts %}
                     <h5 class="mt-4"><a href="{{post.url}}">{{post.title}}</a></h5>
