--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     {% include navbar.html %}
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div id="me" class="col-md-4 offset-md-6">
+            <div id="me" class="col-md-4">
                 <img class="img-fluid img-circle" src="img/m.jpg">
             </div>
         </div>
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6 offset-md-6">
+            <div class="col-md-6">
                 <p>Hello! I'm Mafalda Falcão Ferreira!</p>
                 <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
@@ -48,7 +48,7 @@
                 </ul>
             </div>
             <div class="row justify-content-center mt-5">
-                <div id="blog" class="col-md-6 offset-md-6">
+                <div id="blog" class="col-md-6">
                     <h4>Blog</h4>
                     {% for post in site.posts %}
                     <h5 class="mt-4"><a href="{{post.url}}">{{post.title}}</a></h5>
