--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 {% include header.html %}
 
 <body>
-    {% include navbar.html %}
+    <!-- {% include navbar.html %} -->
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div id="me" class="col-md-4">
@@ -27,6 +27,7 @@
         </div>
         <div class="row justify-content-center mt-3">
             <ul id="media">
+                <li><a href="/img/resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></li>
                 {% if site.facebook_username %}
                 <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
                 {% endif %}
@@ -47,7 +48,7 @@
                 {% endif %}
             </ul>
         </div>
-        <div class="row justify-content-center mt-5">
+        <!-- <div class="row justify-content-center mt-5">
             <div id="blog" class="col-md-6">
                 <h4>Blog</h4>
                 {% for post in site.posts %}
@@ -59,7 +60,7 @@
                 {% endif %}
                 {% endfor %}
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
