--- a/index.html
+++ b/index.html
@@ -15,55 +15,62 @@
         </div>
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
-                <p>Hello! I'm Mafalda Falcão Ferreira!</p>
-                <p>I'm 23 years old and I was born in Porto - Portugal, city where I still live in. I recently graduated from
+                <center>
+                    <h3>Mafalda Falcão Ferreira</h3>
+                    <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIADD @ INESC TEC</a></p>
+                </center>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-6">
+                <p> Currently working as a researcher (and soonly becoming a <em>Ph.D.</em> student), I graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
                     of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation
                     by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
                     innovation ever since I was a little girl. I have special interest in the areas of Data Science and Machine
                     Learning, Databases and Web Development. Besides Informatics, I'm also passionate about mathematics,
                     philosophy, biology, sports, traveling and photography.</p>
-           </div>
-        </div>
-        <div class="row justify-content-center mt-3">
-            <ul id="media">
-                <li><a href="/img/resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></li>
-                {% if site.facebook_username %}
-                <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
-                {% endif %}
-                {% if site.github_username %}
-                <li><a href="http://www.github.com/{{site.github_username}}"><i class="fa fa-github"></i></a></li>
-                {% endif %}
-                {% if site.twitter_username %}
-                <li><a href="http://www.twitter.com/{{site.twitter_username}}"><i class="fa fa-twitter"></i></a></li>
-                {% endif %}
-                {% if site.linkedin_username %}
-                <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}"><i class="fa fa-linkedin"></i></a></li>
-                {% endif %}
-                {% if site.px500_username %}
-                <li><a href="http://www.500px.com/{{site.px500_username}}"><i class="fa fa-500px"></i></a></li>
-                {% endif %}
-                {% if site.instagram_username %}
-                <li><a href="http://www.instagram.com/{{site.instagram_username}}"><i class="fa fa-instagram"></i></a></li>
-                {% endif %}
-            </ul>
-        </div>
-        <!-- <div class="row justify-content-center mt-5">
-            <div id="blog" class="col-md-6">
-                <h4>Blog</h4>
-                {% for post in site.posts %}
-                <h5 class="mt-4"><a href="{{post.url}}">{{post.title}}</a></h5>
-                {% if post.abstract %}
-                {{post.abstract}}
-                {% else %}
-                {{post.excerpt}}
-                {% endif %}
-                {% endfor %}
+                </div>
             </div>
-        </div> -->
-    </div>
-</body>
-
-{% include footer.html %}
-
-</html>
+            <div class="row justify-content-center mt-3">
+                <ul id="media">
+                    <li><a href="/img/resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></li>
+                    {% if site.facebook_username %}
+                    <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
+                    {% endif %}
+                    {% if site.github_username %}
+                    <li><a href="http://www.github.com/{{site.github_username}}"><i class="fa fa-github"></i></a></li>
+                    {% endif %}
+                    {% if site.twitter_username %}
+                    <li><a href="http://www.twitter.com/{{site.twitter_username}}"><i class="fa fa-twitter"></i></a></li>
+                    {% endif %}
+                    {% if site.linkedin_username %}
+                    <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}"><i class="fa fa-linkedin"></i></a></li>
+                    {% endif %}
+                    {% if site.px500_username %}
+                    <li><a href="http://www.500px.com/{{site.px500_username}}"><i class="fa fa-500px"></i></a></li>
+                    {% endif %}
+                    {% if site.instagram_username %}
+                    <li><a href="http://www.instagram.com/{{site.instagram_username}}"><i class="fa fa-instagram"></i></a></li>
+                    {% endif %}
+                </ul>
+            </div>
+            <!-- <div class="row justify-content-center mt-5">
+                <div id="blog" class="col-md-6">
+                    <h4>Blog</h4>
+                    {% for post in site.posts %}
+                    <h5 class="mt-4"><a href="{{post.url}}">{{post.title}}</a></h5>
+                    {% if post.abstract %}
+                    {{post.abstract}}
+                    {% else %}
+                    {{post.excerpt}}
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div> -->
+        </div>
+    </body>
+    
+    {% include footer.html %}
+    
+    </html>
