--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-md-6">
-                <p> Currently working as a researcher (and soonly becoming a <em>Ph.D.</em> student), I graduated from
+                <p> Currently working as a researcher (and soon becoming a <em>Ph.D.</em> student), I graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
                     of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation
                     by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
-                    innovation ever since I was a little girl. I have special interest in the areas of Data Science and Machine
-                    Learning, Databases and Web Development. Besides Informatics, I'm also passionate about mathematics,
-                    philosophy, biology, sports, traveling and photography.</p>
+                    innovation ever since I was a little girl. I have a special interest in the areas of Data Science and Machine
+                    Learning, and Web Development. Besides Informatics, I'm also passionate about mathematics,
+                    philosophy, biology, sports, traveling, and photography.</p>
                 </div>
             </div>
             <div class="row justify-content-center mt-3">
