--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
                 <center>
-                    <h3>Mafalda Falcão Ferreira</h3>
+                    <h3 id="name">Mafalda Falcão Ferreira</h3>
                     <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIADD @ INESC TEC</a></p>
                 </center>
             </div>
