--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
             </div>
         </div>
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
-                <center>
-                    <h3 id="name">Mafalda Falcão Ferreira</h3>
-                    <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIADD @ INESC TEC</a></p>
-                </center>
-            </div>
+            <center>
+                <h3 id="name">Mafalda Falcão Ferreira</h3>
+                <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIADD @ INESC TEC</a></li>
+            </center>        
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-md-6">
-                <p> Currently working as a researcher (and soon becoming a <em>Ph.D.</em> student), I graduated from
+                <p> Currently <em>Ph.D.</em> student, researcher and invited assistant, I graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
                     of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation
                     by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
@@ -34,15 +32,15 @@
             </div>
             <div class="row justify-content-center mt-3">
                 <ul id="media">
-                    <li><a href="/img/resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></li>
-                    {% if site.facebook_username %}
-                    <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
-                    {% endif %}
+                    <li><a href="img/resume.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></li>
                     {% if site.github_username %}
                     <li><a href="http://www.github.com/{{site.github_username}}"><i class="fa fa-github"></i></a></li>
                     {% endif %}
                     {% if site.twitter_username %}
                     <li><a href="http://www.twitter.com/{{site.twitter_username}}"><i class="fa fa-twitter"></i></a></li>
+                    {% endif %}
+                    {% if site.facebook_username %}
+                    <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
                     {% endif %}
                     {% if site.linkedin_username %}
                     <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}"><i class="fa fa-linkedin"></i></a></li>
@@ -55,6 +53,7 @@
                     {% endif %}
                 </ul>
             </div>
+        </div>
             <!-- <div class="row justify-content-center mt-5">
                 <div id="blog" class="col-md-6">
                     <h4>Blog</h4>
