--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row justify-content-center mt-5">
             <center>
                 <h3 id="name">Mafalda Falcão Ferreira</h3>
-                <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIADD @ INESC TEC</a></li>
+                <p id="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/cese">CESE @ INESC TEC</a></p>
             </center>        
         </div>
         <div class="row justify-content-center mt-4">
