updated inesc link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <center>
                 <h3 id="name">Mafalda Falcão Ferreira</h3>
                 <p class="work"><i class="fas fa-angle-right"></i> <a href="https://dei.fe.up.pt/pt/home-page/">DEI @ FEUP</a></p>
-                <p class="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/cese">LIAAD @ INESC TEC</a></p>
+                <p class="work"><i class="fas fa-angle-right"></i> <a href="https://www.inesctec.pt/en/centres/liaad">LIAAD @ INESC TEC</a></p>
             </center>        
         </div>
         <div class="row justify-content-center mt-4">
