opening link in a different tab

--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
                 <ul id="media">
                     <li><a href="img/resume.pdf" target="_blank"><i class="ai ai-cv-square"></i></a></li>
                     {% if site.scholar_username %}
-                    <li><a href="https://scholar.google.pt/citations?hl=pt-PT&pli=1&user={{site.scholar_username}}"><i class="ai ai-google-scholar-square"></i></a></li>
+                    <li><a href="https://scholar.google.pt/citations?hl=pt-PT&pli=1&user={{site.scholar_username}}" target="_blank"><i class="ai ai-google-scholar-square"></i></a></li>
                     {% endif %}
                     {% if site.orcid_username %}
-                    <li><a href="https://orcid.org/{{site.orcid_username}}"><i class="ai ai-orcid-square"></i></a></li>
+                    <li><a href="https://orcid.org/{{site.orcid_username}}" target="_blank"><i class="ai ai-orcid-square"></i></a></li>
                     {% endif %}
                     {% if site.github_username %}
-                    <li><a href="http://www.github.com/{{site.github_username}}"><i class="fa fa-github"></i></a></li>
+                    <li><a href="http://www.github.com/{{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a></li>
                     {% endif %}
                     {% if site.twitter_username %}
-                    <li><a href="http://www.twitter.com/{{site.twitter_username}}"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="http://www.twitter.com/{{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     {% endif %}
                     {% if site.facebook_username %}
-                    <li><a href="http://www.facebook.com/{{site.facebook_username}}"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://www.facebook.com/{{site.facebook_username}}" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     {% endif %}
                     {% if site.linkedin_username %}
-                    <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     {% endif %}
                     {% if site.px500_username %}
-                    <li><a href="http://www.500px.com/{{site.px500_username}}"><i class="fa fa-500px"></i></a></li>
+                    <li><a href="http://www.500px.com/{{site.px500_username}}" target="_blank"><i class="fa fa-500px"></i></a></li>
                     {% endif %}
                     {% if site.instagram_username %}
-                    <li><a href="http://www.instagram.com/{{site.instagram_username}}"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="http://www.instagram.com/{{site.instagram_username}}" ><i class="fa fa-instagram"></i></a></li>
                     {% endif %}
                 </ul>
             </div>
