forgot to commit this one

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li><a href="http://www.500px.com/{{site.px500_username}}" target="_blank"><i class="fa fa-500px"></i></a></li>
                     {% endif %}
                     {% if site.instagram_username %}
-                    <li><a href="http://www.instagram.com/{{site.instagram_username}}" ><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="http://www.instagram.com/{{site.instagram_username}}" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     {% endif %}
                 </ul>
             </div>
