--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row justify-content-center mt-3">
                 <ul id="media">
-                    <li><a href="img/resume.pdf" target="_blank"><i class="ai ai-cv-square"></i></a></li>
+                    <li><a href="assets/resume.pdf" target="_blank"><i class="ai ai-cv-square"></i></a></li>
                     {% if site.scholar_username %}
                     <li><a href="https://scholar.google.pt/citations?hl=pt-PT&pli=1&user={{site.scholar_username}}" target="_blank"><i class="ai ai-google-scholar-square"></i></a></li>
                     {% endif %}
