--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-md-6">
-                <p> Currently a <em>Ph.D.</em> candidate, a researcher, and an invited lecturer, I graduated from
+                <p> Currently a <em>Ph.D.</em> student, a researcher, and an invited lecturer, I graduated from
                     the Integrated Master in Informatics and Computing Engineering at the Faculty of Engineering
                     of the University of Porto - <a href="http://www.fe.up.pt" id="feup">FEUP</a>. You can find my MSc dissertation
                     by<a href="http://hdl.handle.net/10216/106477"> clicking here!</a> I love technology and
